hphp/test/slow/closure/invalid-class-name.hhas.expectf
Fatal error: Assembler Error: line 7: anonymous class and closure names may not contain ids in hhas in %s/invalid-class-name.hhas on line -1
